# AbletonGPT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_DEV.md  pyproject.toml
.github/workflows/: python-app.yml
ableton_gpt/: __init__.py  __main__.py  cli.py  config.py  core.py  exceptions.py  utils.py
docs/: INSTALL_REMOTE_SCRIPT.md  architecture.md
remote_script/AbletonGPT/: __init__.py  ableton_song_adapter.py  command_dispatcher.py  control_surface.py  live_adapter.py  registry.py  socket_server.py  song_adapter.py
remote_script/AbletonGPT/commands/: transport.py
src/abletongpt/: bridge.py  socket_transport.py
src/abletongpt/bridges/: __init__.py  remote_script.py
tests/: test_ableton_song_adapter.py  test_bridge.py  test_cli.py  test_command_registry.py  test_config.py  test_core.py  test_live_adapter.py  test_remote_script_bridge.py  test_remote_script_dispatcher.py  test_socket_transport.py  test_song_adapter.py  test_utils.py
